@@ -1,0 +1,12 @@
+\header {
+    
+    texidoc = "The autobeamer may be switched off for a single note
+    with @code{\noBeam}."
+
+
+    }
+\version "2.1.25"
+
+\score {
+    \notes { c8 c-\noBeam c c }
+    }
