@@ -1,3 +1,10 @@
+2004-02-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/auto-beam-engraver.cc (try_music): accept and process
+	beam-forbid-event.
+
+	* input/regression/auto-beam-no-beam.ly: new file.
+
 2004-02-20  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* lily/accidental.cc (print): Change font-relative-size ->
